# EmailAutomation

back/: main.py  pyproject.toml  utils.py
back/db/: settings.py
front/: bun.lockb  package.json
front/src/: App.tsx  api.ts  types.ts
front/src/animations/: agent.json  spinner2.json
front/src/components/: AgentModal.tsx  DraftModal.tsx  DraggableAgent.tsx  GearAnimation.tsx  RocketAnimation.tsx  SettingsModal.tsx  Sidebar.tsx
front/src/pages/: Dashboard.tsx  LandingPage.tsx
